--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <main>
         <section class="card-summary__container">
 
-            <img src="./images/illustration-hero.svg" alt="">
+            <img src="./images/illustration-hero.svg" alt="Ilustration Hero">
 
             <div class="card-summary__content">
 
                 <div class="card-summary__text">
 
-                    <h2>Order Summary</h2>
+                    <h1>Order Summary</h1>
 
                     <p>
                         You can now listen to millions of songs, audiobooks, and podcasts on any 
