Update inde.html img

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="card-summary__music">
 
                     <div class="card-summary__preço">
-                        <img src="./images/icon-music.svg" alt="">
+                        <img src="./images/icon-music.svg" alt="Icon Music">
                         <div class="card-summary__oldpreço">
                             <p class="preço1">Annual Plan</p>   
                             <p class="preço2">$59.99/year</p>
